--- a/download.html
+++ b/download.html
@@ -130,12 +130,12 @@ iframe{width:100%;height:200px;border-radius:14px;border:none}
   <input id="roomPass" type="password" placeholder="Enter room password">
   <div class="hint">Hint: <b>RS@DDMMYYYY</b></div>
 
-  <!-- DISCLAIMER (POINTS FORMAT) -->
+  <!-- DISCLAIMER (UPDATED) -->
   <div class="disclaimer">
     <b>Disclaimer:</b>
     <ul>
       <li>After successful login, users must carefully read and follow all instructions provided inside the dashboard.</li>
-      <li>The access password is date-based and automatically changes every 24 hours due to copyright © policy.</li>
+      <li>The access password automatically changes after 24 hours due to copyright © policy.</li>
     </ul>
   </div>
 
@@ -286,4 +286,4 @@ function unlockAPK(){
 </script>
 
 </body>
-      </html>
+                                                                                               </html>
