--- a/download.html
+++ b/download.html
@@ -181,6 +181,12 @@ Follow the steps carefully to avoid access issues.<br><br>
 4️⃣ If any extra page or ad opens, press <b>BACK once</b> and continue. Do not close the tab.<br>
 5️⃣ Laptop / PC users must turn <b>ON VPN</b> and use an <b>Ad-Blocker</b> extension.<br><br>
 
+<!-- 🔽 ONLY ADDED LINES -->
+<b>🔐 Password Information:</b><br>
+• Website login password and APK password are <b>date-based</b> and change automatically every 24 hours.<br>
+• If you access through the APK, ads may appear because it opens directly in Google Chrome.<br><br>
+<!-- 🔼 ONLY ADDED LINES -->
+
 <b>⏳ Key Validity:</b><br>
 • Access Key is valid for <b>24 hours only</b>.<br>
 • After 24 hours, you must login again and repeat the same process.<br>
@@ -284,4 +290,4 @@ function unlockAPK(){
 </script>
 
 </body>
-    </html>
+      </html>
