--- a/download.html
+++ b/download.html
@@ -143,6 +143,10 @@ iframe{width:100%;height:200px;border-radius:14px;border:none}
   <div class="pw-logo" style="width:90px;height:90px">
     <div class="pw-text" style="font-size:46px">PW</div>
   </div>
+  <div class="access">
+  <div class="tick">✔</div>
+  ACCESS GRANTED
+  </div>
 
   <div class="timer" id="timer"></div>
 
