--- a/download.html
+++ b/download.html
@@ -67,7 +67,36 @@ button{
 .hint{font-size:12.5px;margin-top:6px;color:#333;line-height:1.6}
 .warning{font-size:12.5px;margin-top:10px;color:#8a0000;font-weight:600}
 .disclaimer{font-size:12.5px;margin-top:10px;color:#222;line-height:1.7}
+/* ===== ACCESS GRANTED ===== */
+.access{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  gap:10px;
+  margin:12px 0;
+  font-weight:800;
+  color:#16a34a;
+  text-align:center;
+}
 
+.tick{
+  width:26px;
+  height:26px;
+  border-radius:50%;
+  background:#22c55e;
+  color:#fff;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:16px;
+  animation:pop .5s ease-out;
+}
+
+@keyframes pop{
+  0%{transform:scale(0);opacity:0}
+  70%{transform:scale(1.2);opacity:1}
+  100%{transform:scale(1)}
+  }
 /* ===== TIMER ===== */
 .timer{
   background:#000;color:#fff;padding:14px;border-radius:18px;
