--- a/download.html
+++ b/download.html
@@ -97,6 +97,16 @@ button{
   70%{transform:scale(1.2);opacity:1}
   100%{transform:scale(1)}
   }
+  /* ===== IMPORTANT NOTICE ===== */
+.important-notice{
+  margin-top:14px;
+  padding:14px;
+  border-radius:14px;
+  background:rgba(255,0,0,.07);
+  color:#b00020;
+  font-size:13px;
+  line-height:1.7;
+  }
 /* ===== TIMER ===== */
 .timer{
   background:#000;color:#fff;padding:14px;border-radius:18px;
@@ -231,7 +241,16 @@ Follow the steps carefully to avoid access issues.<br><br>
 • Android: Website + APK<br>
 • iOS: Website only<br>
 • Laptop / PC: Website (VPN + Ad-Blocker recommended)
+<hr style="margin:16px 0;border:none;height:1px;background:rgba(0,0,0,.2)">
 
+<div class="important-notice">
+  <b>⚠ Important Notice</b><br><br>
+  • Do <b>NOT</b> share this website, access key, or APK with anyone.<br>
+  • Any unauthorized sharing may result in <b>immediate access suspension</b>.<br>
+  • Access is limited to <b>24-hour sessions</b> only.<br>
+  • Passwords are <b>date-based</b> and change automatically every day.<br>
+  • Repeated misuse may lead to <b>permanent blocking</b>.
+</div>
     </div>
   </div>
 
