--- a/download.html
+++ b/download.html
@@ -287,8 +287,8 @@ Follow the steps carefully to avoid access issues.<br><br>
     <button onclick="unlockAPK()">Unlock APK</button>
     <div id="apkMsg" class="hint"></div>
     <a id="apkLink"
-   href="apk/PW.apk"
-   download
+   href="https://drive.google.com/uc?export=download&id=1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH"
+      download 
    style="display:none;text-decoration:none">
 
   <button style="margin-top:10px;background:#16a34a">
