--- a/download.html
+++ b/download.html
@@ -22,11 +22,11 @@ body{
 
   pointer-events: none;
 
-  opacity: 0.18;          /* 🔥 clearly visible */
-  filter: blur(2px);      /* 🔥 soft aesthetic blur */
-  transform: scale(1.25); /* 🔥 balanced size */
+  opacity: 0.30;        /* 🔥 MAIN CHANGE */
+  filter: blur(1px);    /* 🔥 watermark sharp रहेगा */
+  transform: scale(1.15);
 
-  z-index: 0;             /* cards ke peeche */
+  z-index: 0;
 }
 
 .watermark .pw-logo{
